# Job-app-Assistant

./: .env.docker  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_COMPLETION.md  README.md  SECURITY.md  check_status.py  conftest.py  docker-compose.prod.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run_cli.py  run_web.py  test_comprehensive.py  test_functionality.py  test_github_ready.py  test_installation.py  test_pre_commit.py  test_production_ready.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docs/: job_url_parsing_guide.md
job_application_assistant/: __init__.py  __main__.py
job_application_assistant/agents/: __init__.py  interview_prep_agent.py  job_application_agent.py
job_application_assistant/cli/: __init__.py  main.py
job_application_assistant/core/: __init__.py  config.py  exceptions.py  llm.py  logging.py
job_application_assistant/models/: __init__.py  data_models.py
job_application_assistant/tools/: __init__.py  document_processor.py
job_application_assistant/utils/: __init__.py  streamlit_helpers.py
job_application_assistant/web/: __init__.py  app.py
scripts/: dev-setup.sh  docker-build.sh  release.sh
tests/: test_cli.py  test_config.py  test_models.py
